# LiFM2

./: CMakeLists.txt  LICENSE  config.json  main.cpp
LiFMQt/: CMakeLists.txt  resources.qrc
LiFMQt/Views/: Header.qml  Mail.qml  main.qml
LiFMQt/include/LiFMQt/: LiFMQt.hpp
LiFMQt/src/: LiFMQt.cpp
LibLiFM/: CMakeLists.txt
LibLiFM/src/: LiFM.cpp
LibLiFM/src/Time/: TimeEvent.hpp  TimeKeeper.cpp
LibLiFM/src/models/: League.cpp  League.hpp  Player.cpp  Player.hpp
LibLiFM/src/models/Tactics/: Tactic.hpp
LibLiFM/src/models/Tactics/Positions/: LeftBack.hpp
LibLiFM/src/models/Transfer/: TransferDetails.cpp  TransferOffer.cpp
LibLiFM/src/util/: MatchSim.hpp  MockDataCreator.hpp  ModelStorage.cpp  ModelStorage.hpp  RandomNumberGenerator.hpp
LibLiFM/tests/: CMakeLists.txt  LiFMLibTest.cpp
src/: CMakeLists.txt  Club.cpp  Club.hpp  LiFM.cpp
src/Time/: TimeKeeper.cpp  TimeKeeper.hpp
src/include/LiFM/: LiFM.hpp
src/models/: Club.cpp  Club.hpp  League.cpp  League.hpp  Match.hpp  Player.cpp  Player.hpp  Tactic.hpp
src/models/Tactics/Positions/: LeftBack.cpp  Position.hpp
src/models/Transfer/: TransferDetails.hpp  TransferOffer.cpp  TransferOffer.hpp  TransferState.hpp
src/util/: DataCreator.hpp  MatchSim.cpp  MockDataCreator.cpp  MockDataCreator.hpp  ModelStorage.cpp  ModelStorage.hpp
tests/: LiFMLibTest.cpp
